refactor: substituição do método '.unique()' por '.values'

--- a/tarefa_A1_Prática_Pandas.ipynb
+++ b/tarefa_A1_Prática_Pandas.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +166,7 @@
        "[81 rows x 6 columns]"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -211,7 +211,7 @@
      "output_type": "stream",
      "text": [
       "Item 4. \n",
-      "O estados brasileiros que possuem IDH acima da média no ano de 1991 são: \n",
+      "Os estados brasileiros que possuem IDH acima da média no ano de 1991 são: \n",
       "AP, DF, ES, GO, MG, MS, PR, RJ, RR, RS, SC e SP.\n",
       "\n"
      ]
@@ -219,7 +219,7 @@
    ],
    "source": [
     "df_idhFiltrado = df_anoFiltrado[ df_anoFiltrado[\"idhm\"] > df_idhMedio]\n",
-    "arrayEstados = df_idhFiltrado.sigla_uf.unique()\n",
+    "arrayEstados = df_idhFiltrado.sigla_uf.values\n",
     "\n",
     "estados = ''\n",
     "for i in arrayEstados:\n",
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -288,9 +288,9 @@
    ],
    "source": [
     "maiorIdh = df_anoFiltrado.idhm.max()\n",
-    "estadoMaiorIdh = df_anoFiltrado[ df_anoFiltrado[\"idhm\"] == maiorIdh].sigla_uf.unique()[0]\n",
+    "estadoMaiorIdh = df_anoFiltrado[ df_anoFiltrado[\"idhm\"] == maiorIdh].sigla_uf.values[0]\n",
     "menorIdh = df_anoFiltrado.idhm.min()\n",
-    "estadoMenorIdh = df_anoFiltrado[ df_anoFiltrado[\"idhm\"] == menorIdh].sigla_uf.unique()[0]\n",
+    "estadoMenorIdh = df_anoFiltrado[ df_anoFiltrado[\"idhm\"] == menorIdh].sigla_uf.values[0]\n",
     "\n",
     "resposta = f'''Item 6. \n",
     "Analisando os dados do DataFrame, pode-se percerber que no ano de 1991, o estado do {estadoMenorIdh} teve o menor IDH de {menorIdh}.\n",
